# duplicatefilesfinder

./: meson.build
data/: appdata.xml.in  gschema.xml  meson.build
meson/: post_install.py
src/: Application.vala
src/View/: PrepareHomeScan.vala  Resume.vala  StartHomeScan.vala  Welcome.vala
src/View/Widgets/: CategoryListRow.vala  DuplicateViewer.vala  ExcludeListRow.vala  IconListRow.vala  ItemDuplicateViewer.vala  Panel.vala  PanelCategory.vala  Preferences.vala  PreviewContentFile.vala
src/core/: FileExtension.vala  FileOcurrence.vala  FindDuplicate.vala  Scanner.vala
